--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/Aizendaisho/censamedin/img/divinoniñ1.jpg" alt="First slide">
+          <img class="d-block w-100" src="censamedin/img/divinoniñ1.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Por todos</h5>
             <p>No es cosa de locos, es cosa de todos.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/Aizendaisho/censamedin/img/divinoniñ2.jpg" alt="Second slide">
+          <img class="d-block w-100" src="censamedin/img/divinoniñ2.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Compromiso</h5>
             <p>Nuestra institucion tiene como base una filosofia humanistica que promueve el desarrollo integral de las personas en su dimencion bio-psicosocial poniedno enfasis en la identidadd, el respecto y la autoafirmacion de los valores culturales, sociales, familiares, ocuapacionales y personales de los dominicanos</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/Aizendaisho/censamedin/img/divinoniñ3.jpg" alt="Third slide">
+          <img class="d-block w-100" src="censamedin/img/divinoniñ3.jpg" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Servicio</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolor ullam deleniti, dicta fugiat animi eveniet incidunt tempore natus doloremque libero molestias quidem officia porro quisquam. Mollitia fugiat ea culpa?</p>
